[package]
name = "holaplex-hub-cli"
description = "Command-line interface for Holaplex Hub"
authors = ["Holaplex <engineering@holaplex.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["cargo", "derive", "env", "wrap_help"] }
directories = "5.0.1"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
itertools = "0.11.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["brotli", "deflate", "gzip", "json", "multipart"] }
ron = "0.8.1"
rpassword = "7.2.0"
rustyline = { version = "12.0.0", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
toml = { version = "0.8.0", features = ["preserve_order"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde"] }
