[package]
name = "holaplex-hub-cli"
description = "Command-line interface for Holaplex Hub"
authors = ["Holaplex <engineering@holaplex.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
backon = "0.4.1"
bs58 = "0.5.0"
clap = { version = "4.4.4", features = ["cargo", "derive", "env", "wrap_help"] }
crossbeam = "0.8.2"
dashmap = "5.5.3"
directories = "5.0.1"
dispose = "0.5.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
graphql_client = "0.13.0"
infer = "0.15.0"
itertools = "0.11.0"
log = "0.4.20"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
prost = "0.12.1"
reqwest = { version = "0.11.20", features = ["brotli", "deflate", "gzip", "json", "multipart", "stream"] }
rocksdb = { version = "0.21.0", features = ["io-uring", "multi-threaded-cf", "lz4", "zlib"], default-features = false }
rpassword = "7.2.0"
rustyline = { version = "12.0.0", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["float_roundtrip", "preserve_order"] }
tokio = { version = "1.32.0", features = ["parking_lot", "rt-multi-thread"] }
toml = { version = "0.8.0", features = ["preserve_order"] }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "const_xxh3"] }

[build-dependencies]
prost-build = "0.12.1"
